--- a/superstars/space.css
+++ b/superstars/space.css
@@ -73,5 +73,43 @@ h1 {
 }
 
 #starreset {
+    position: relative;
+    bottom: 50px;
+    left: 730px;
+    width: 300px;
+    background-color: rgb(0, 0, 82);
+    color: powderblue;
+    text-align: center;
+    padding: 15px;
+    font-size: xx-large;
+    border-radius: 20px;
+    font-weight: bold;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    text-decoration: none;
+}
 
+.minigame {
+    position: absolute;
+    left: 400px;
+}
+
+.happening {
+    position: absolute;
+    left: 1130px;
+}
+
+.des {
+    width: 80%;
+    position: relative;
+    top: 400px;
+    left: 180px;
+}
+
+.des p {
+    font-size: large;
+}
+
+.des h2 {
+    text-align: center;
+    font-size: xx-large;
 }
