--- a/diceblock/diceblock.css
+++ b/diceblock/diceblock.css
@@ -4,7 +4,7 @@ body {
 
 #single {
     position: relative;
-
+    left: 720px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -17,7 +17,8 @@ body {
 }
 
 #mush {
-    
+    position: relative;
+    left: 695px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -30,7 +31,8 @@ body {
 }
 
 #double {
-    
+    position: relative;
+    left: 722px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -43,7 +45,8 @@ body {
 }
 
 #triple {
-    
+    position: relative;
+    left: 730px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -56,7 +59,8 @@ body {
 }
 
 #curse {
-    
+    position: relative;
+    left: 730px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -69,10 +73,12 @@ body {
 }
 
 p {
+    position: relative;
+    left: 115px;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 25px;
     text-align: center;
-    width: 84%;
+    width: 86%;
 }
 
 h1 {
@@ -84,4 +90,6 @@ h1 {
 h2 {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 25px;
+    position: relative;
+    left: 800px;
 }
