--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@ body {
 }
 
 #superyoshi {
-    
+    position: relative;
+    left: 700px;
     background-color: rgb(251, 245, 211);
     color: rgb(0, 0, 82);
     text-align: center;
@@ -17,7 +18,8 @@ body {
 
 
 #superpeach {
-    
+    position: relative;
+    left: 700px;
     background-color: rgb(255, 212, 219);
     color: rgb(75, 0, 0);
     text-align: center;
@@ -31,7 +33,8 @@ body {
 
 
 #superspace {
-    
+    position: relative;
+    left: 780px;
     background-color: powderblue;
     color: rgb(0, 0, 82);
     text-align: center;
@@ -45,7 +48,8 @@ body {
 
 
 #superboo {
-    
+    position: relative;
+    left: 780px;
     background-color: lightgrey;
     color: rgb(40, 0, 92);
     text-align: center;
@@ -59,7 +63,8 @@ body {
 
 
 #superwood {
-    
+    position: relative;
+    left: 760px;
     background-color: rgb(193, 240, 193);
     color:rgb(0, 49, 0);
     text-align: center;
@@ -73,7 +78,8 @@ body {
 
 
 #diceblock {
-    
+    position: relative;
+    left: 705px;
     background-color: rgb(52, 0, 110);
     color: white;
     text-align: center;
@@ -88,11 +94,13 @@ body {
 h1, h2, p {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     text-align: center;
-    color: rgb(71, 19, 19)
+    color: rgb(71, 19, 19);
 }
 
 p {
-    width: 82%;
+    position: relative;
+    left: 130px;
+    width: 85%;
     font-size: 20px;
 }
 
